[gd_scene load_steps=4 format=3 uid="uid://b2j6sdi3wn0pp"]

[ext_resource type="FontFile" uid="uid://bi04iecmbt37l" path="res://assets/fonts/ARCADECLASSIC.TTF" id="1_5pqrk"]
[ext_resource type="Script" path="res://Scripts/inventory_test.gd" id="1_fpraf"]
[ext_resource type="PackedScene" uid="uid://bxbnos3drxhfp" path="res://Scenes/Inventory_UI.tscn" id="2_w8vtx"]


[node name="inventory_test" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fpraf")

[node name="InventoryUI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="InventoryUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.376471, 0.321569, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="InventoryUI/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_top = 50.0
offset_right = 37.5
offset_bottom = 76.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_5pqrk")
theme_override_font_sizes/font_size = 60
text = "Inventory"
metadata/_edit_use_anchors_ = true

[node name="Inventory_UI" parent="InventoryUI/ColorRect" instance=ExtResource("2_w8vtx")]
metadata/_edit_use_anchors_ = true

[node name="apples" type="Button" parent="."]
layout_mode = 0
offset_right = 359.0
offset_bottom = 246.0
text = "buy apples
"

[node name="upgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 785.0
offset_top = 246.0
offset_right = 1116.0
offset_bottom = 519.0
text = "3 apples 5 sticks
"

[node name="sticks" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 405.0
offset_right = 454.0
offset_bottom = 640.0
text = "buy sticks
"

[connection signal="pressed" from="apples" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="sticks" to="." method="_on_sticks_pressed"]
